--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<span class="copyright">&copy; #NotReally. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+						<span class="copyright2"><div>Icons made by <a href="https://www.flaticon.com/authors/becris" title="Becris">Becris</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></span>
 					</footer>
 
 			</div>
