fixed link in footer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; #NotReally. Design: <a href="http://html5up.net">HTML5 UP. Icons made by <a href="https://www.flaticon.com/authors/becris" title="Becris">Becris</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></a>.</span>
+						<span class="copyright">&copy; #NotReally. Design: <a href="http://html5up.net">HTML5 UP.</a> Favicon made by <a href="https://www.flaticon.com/authors/becris" title="Becris">Becris</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></span>
 					</footer>
 
 			</div>
